# Etna

./: .gitignore  CMakeLists.txt  FindVulkan.cmake  Makefile  README.md  RendererAPI.txt  TODO.txt  etna_log.txt  stdout
assets/gltf/: zda.gltf
assets/shaders/: bindless_input_structures.glsl  bindless_mesh_mat.frag  bindless_mesh_mat.vert  blinn_mr.frag  blinn_mr.vert  blinn_mr_tp.frag  blinn_mr_tp.vert  blinn_phong.frag  blinn_phong.vert  cel.frag  cel.vert  common.glsl  draw.comp  draws.comp  gradient.comp  indirect_testing.glsl  input_structures.glsl  input_structures_count.glsl  mesh.vert  mesh_mat.frag  mesh_mat.vert  pbr_mr.frag  pbr_mr.vert  skinning.comp  solid.frag  solid.vert  test.frag  test.vert  tex_image.frag  triangle.frag  triangle.vert  ui.vert
assets/shaders/animation/: animation_common.glsl  morph.comp  skinning.comp
assets/shaders/shadow/: shadow_draws.comp  shadow_mask.frag  shadow_mask.vert
engine/: application_types.h  defines.h  entry_point.h
engine/core/: asserts.h  camera.c  camera.h  engine.c  engine.h  etfile.c  etfile.h  etstring.c  etstring.h  events.c  events.h  input.c  input.h  logger.c  logger.h
engine/data_structures/: dynarray.c  dynarray.h
engine/math/: math_types.h
engine/memory/: etmemory.c  etmemory.h  etmemory_utils.h
engine/platform/: etwindow.c  etwindow.h  etwindow_private.h  platform.c  platform.h
engine/renderer/: rendererAPI.h  renderer_types.h
engine/renderer/src/: GLTF_MR.c  GLTF_MR.h  buffer.c  buffer.h  descriptor.c  descriptor.h  device.c  image.c  material.c  material.h  pipeline.c  pipeline.h  renderables.c  renderables.h  renderer.c  renderer.h  shader.c  shader.h  swapchain.c  swapchain.h  vk_types.h
engine/renderer/src/utilities/: vkinit.c  vkutils.c  vkutils.h
engine/renderer/src/window/: renderer_window.c  renderer_window.h
engine/resources/: image_manager.c  image_manager.h  material.c  material.h  material_manager.c  material_manager.h  material_refactor.c  material_refactor.h  mesh_manager.c  mesh_manager.h  resource_manager.h  resource_private.h  resource_types.h
engine/resources/importers/: gltfimporter.c  gltfimporter.h  importer.c  importer.h  importer_types.h  pmximporter.c  pmximporter.h
engine/scene/: scene.c  scene.h  scene_private.h  scene_resources.h  scene_types.h  transforms.c  transforms.h
engine/src/: application_types.h  asserts.h  defines.h  engine.c  engine.h  entry_point.h  etmemory.c  etmemory.h  filesystem.c  filesystem.h  logger.c  logger.h
engine/src/containers/: dynarray.c  dynarray.h
engine/src/core/: camera.c  camera.h  clock.c  clock.h  engine.c  engine.h  etfile.c  etfile.h  etmemory.c  etmemory.h  etstring.c  etstring.h  events.c  events.h  filesystem.c  filesystem.h  input.c  input.h  logger.c  logger.h
engine/src/data_structures/: dynarray.h
engine/src/loaders/: gltfloader.c  gltfloader.h  loader_types.h
engine/src/math/: etmath.h  math_types.h
engine/src/memory/: etmemory.h
engine/src/platform/: etwindow.c  etwindow.h  filesystem.c  filesystem.h  platform.c  platform.h
engine/src/renderer/: device.c  device.h  image.c  image.h  pipeline.c  pipeline.h  renderer.c  renderer.h  rendererAPI.h  renderer_types.h  shader.c  shader.h  swapchain.c  swapchain.h  vkutils.c  vkutils.h
engine/src/renderer/src/: GLTFMetallic_Roughness.c  GLTFMetallic_Roughness.h  GLTF_MR.c  GLTF_MR.h  buffer.c  buffer.h  descriptor.c  descriptor.h  device.c  device.h  image.c  image.h  material.c  material.h  pipeline.c  pipeline.h  renderables.c  renderables.h  renderer.c  renderer.h  shader.c  shader.h  swapchain.c  swapchain.h  vk_types.h
engine/src/renderer/src/utilities/: vkinit.c  vkinit.h  vkutils.c  vkutils.h
engine/src/renderer/src/window/: renderer_window.c  renderer_window.h
engine/src/renderer/utilities/: vkinit.c  vkinit.h
engine/src/renderer/window/: renderer_window.h
engine/src/resources/: image_manager.c  image_manager.h  material_manager.c  material_manager.h  mesh_manager.c  mesh_manager.h  resource_private.h  resource_types.h
engine/src/resources/importers/: gltfimporter.c
engine/src/resources/loaders/: gltfloader.c  gltfloader.h
engine/src/scene/: node.h  scene.c  scene.h  scene_private.h
engine/utils/: dynarray.h
sandbox/: application.c  application.h  main.c
sandbox/src/: application.c  application.h  main.c
tests/src/: expect.h  main.c  test_clock.c  test_clock.h  test_manager.c  test_manager.h  test_manager_tests.c  test_manager_tests.h
